# obs-node

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build-linux.yml  build-windows.yml  linux.yml  mac.yml  main.yml  windows.yml
docker/: Dockerfile  build-and-run.sh  entrypoint.sh
scripts/: build-windows.cmd  build.sh  fix-loader-path-macos.sh  release.sh  upload.ts
src/: index.js  index.ts  libobs-node.cpp
src/cpp/: display.cpp  display.h  dsk.cpp  dsk.h  main.cpp  scene.cpp  scene.h  settings.cpp  settings.h  source.cpp  source.h  studio.cpp  studio.h  utils.h
src/cpp/platform/: osx.mm  platform.h  windows.cpp
src/scripts/: download.ts  upload.ts
test/: test.js  test.ts
